--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -21,4 +21,8 @@
     <string name="your_firstname">votre prénom</string>
     <string name="lastname">Nom de famille :</string>
     <string name="your_lastname">votre nom de famille</string>
+    <string name="HomePageText">Bonjour et bienvenue \n sur TravelTracker - votre compagnon de voyage préféré !</string>
+    <string name="voyage">Voyage</string>
+    <string name="quit">Quitter</string>
+    <string name="hi">Salut,</string>
 </resources>
