--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,12 @@
     <string name="your_firstname">your firstname</string>
     <string name="lastname">LastName :</string>
     <string name="your_lastname">your lastName</string>
+    <string name="userimg" translatable="false">userimg</string>
+    <string name="HomePageText">Hello and welcome \n to TravelTracker - your favorite travel companion!</string>
+    <string name="btnimg" translatable="false">BtnImg</string>
+    <string name="voyage">Travel</string>
+    <string name="profile" translatable="false">Profile</string>
+    <string name="quit">Quit</string>
+    <string name="hi">Hi,</string>
+    <string name="LoremText" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut erat sit amet ligula lacinia ullamcorper sed ac justo. Sed at viverra ipsum. Fusce tincidunt, dolor sit amet ultrices malesuada, metus sapien aliquam ex, non dapibus libero libero id nulla. Ut commodo sodales ex vitae auctor. Vestibulum in enim ut mauris finibus consectetur.</string>
 </resources>
