--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -25,4 +25,13 @@
     <string name="voyage">Enregistrer\n un voyage</string>
     <string name="quit">Quitter</string>
     <string name="hi">Salut,</string>
+    <string name="TitleSaveTripSteps">Prépare tes valises,\n la brise t\'attend 😆</string>
+    <string name="next">Suivant</string>
+    <string name="travel_start_date">Date de\n Début de Voyage :</string>
+    <string name="city_name">Nom de la Ville:</string>
+    <string name="country_name">Nom du pays :</string>
+    <string name="ex_london">ex : Londres</string>
+    <string name="ex_england">ex : Angleterre</string>
+    <string name="ex_titleTrip">ex : se promener en ville</string>
+    <string name="TextViewTitleTrip">Titre\n du voyage :</string>
 </resources>
