--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -23,6 +23,7 @@
     <string name="your_lastname">votre nom de famille</string>
     <string name="HomePageText">Bonjour et bienvenue \n sur TravelTracker - votre compagnon de voyage préféré !</string>
     <string name="voyage">Enregistrer\n un voyage</string>
+    <string name="history">Historique</string>
     <string name="quit">Quitter</string>
     <string name="hi">Salut,</string>
     <string name="TitleSaveTripSteps">Prépare tes valises,\n la brise t\'attend 😆</string>
@@ -34,4 +35,14 @@
     <string name="ex_england">ex : Angleterre</string>
     <string name="ex_titleTrip">ex : se promener en ville</string>
     <string name="TextViewTitleTrip">Titre\n du voyage :</string>
+    <string name="cancel">Annuler</string>
+    <string name="save">Sauvegarder</string>
+    <string name="summary">Bilan</string>
+    <string name="etimated_budget">Budget estimé:</string>
+    <string name="budget_spent">Budget dépensé :</string>
+    <string name="rate_the_accommodation">Évaluez le logement :</string>
+    <string name="rate_the_ambiance">Évaluez l\'ambiance :</string>
+    <string name="rate_the_quality_of_human_interactions">Évaluez la qualité des interactions humaines :</string>
+    <string name="rate_the_natural_beauty">Évaluez la beauté naturelle :</string>
+    <string name="rate_the_safety_level">Évaluez le niveau de sécurité :</string>
 </resources>
