--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="rate_the_natural_beauty">Rate the natural beauty :</string>
     <string name="rate_the_safety_level">Rate the safety level :</string>
     <string name="ex_10" translatable="false">ex : 10 €</string>
+    <string name="login_error">😢 Sorry, an error occurred. Please try again.</string>
 </resources>
