--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="hi">Hi,</string>
     <string name="LoremText" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut erat sit amet ligula lacinia ullamcorper sed ac justo. Sed at viverra ipsum. Fusce tincidunt, dolor sit amet ultrices malesuada, metus sapien aliquam ex, non dapibus libero libero id nulla. Ut commodo sodales ex vitae auctor. Vestibulum in enim ut mauris finibus consectetur.</string>
     <string name="imgdeco" translatable="false">ImgDeco</string>
-    <string name="TitleSaveTripSteps">Adventure Ahead, Spread Bed 😆</string>
+    <string name="TitleSaveTripSteps">Adventure Ahead,\n Spread Bed 😆</string>
     <string name="next">Next</string>
     <string name="travel_start_date">Travel \nStart Date :</string>
     <string name="city_name">City Name :</string>
