--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -49,4 +49,5 @@
     <string name="login_error">😢 Désolé, une erreur s\'est produite. Veuillez réessayer.</string>
     <string name="already_signup_error">Vous avez déjà un compte.</string>
     <string name="disconnect">Se déconnecter</string>
+    <string name="your_past_adventure">Voici vos\n Aventures Passés\n 🌍</string>
 </resources>
