--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="login_error">😢 Sorry, an error occurred. Please try again.</string>
     <string name="already_signup_error">You already have an account.</string>
     <string name="disconnect">Logout</string>
+    <string name="your_past_adventure">Here are your\n Past Adventures\n 🌍</string>
 </resources>
