--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -34,7 +34,7 @@
     <string name="ex_london">ex : Londres</string>
     <string name="ex_england">ex : Angleterre</string>
     <string name="ex_titleTrip">ex : se promener en ville</string>
-    <string name="TextViewTitleTrip">Titre\n du voyage :</string>
+    <string name="TextViewTitleTrip">Titre du voyage :</string>
     <string name="cancel">Annuler</string>
     <string name="save">Sauvegarder</string>
     <string name="summary">Bilan</string>
@@ -49,4 +49,12 @@
     <string name="already_signup_error">Vous avez déjà un compte.</string>
     <string name="disconnect">Se déconnecter</string>
     <string name="your_past_adventure">Voici vos\n Aventures Passés\n 🌍</string>
+    <string name="details_adventure">Voici le détail\n de votre\n aventure ✈️</string>
+    <string name="note_the_accommodation">Note du logement :</string>
+    <string name="note_the_ambiance">Note de l\'ambiance :</string>
+    <string name="note_the_quality_of_human_interactions">Note de la qualité\n des interactions humaines :</string>
+    <string name="note_the_natural_beauty">Note de la beauté naturelle :</string>
+    <string name="note_the_safety_level">Note le niveau de sécurité :</string>
+    <string name="travel_mood">Humeur du Voyage :</string>
+    <string name="adventure_index">Indice d\'aventure :</string>
 </resources>
