Strings fix & detailsAct
fix some strings and fix some layouts

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -49,7 +49,7 @@
     <string name="already_signup_error">Vous avez déjà un compte.</string>
     <string name="disconnect">Se déconnecter</string>
     <string name="your_past_adventure">Voici vos\n Aventures Passés\n 🌍</string>
-    <string name="details_adventure">Voici le détail\n de votre\n aventure ✈️</string>
+    <string name="details_adventure">Voici le détail de votre aventure ✈️</string>
     <string name="note_the_accommodation">Note du logement :</string>
     <string name="note_the_ambiance">Note de l\'ambiance :</string>
     <string name="note_the_quality_of_human_interactions">Note de la qualité\n des interactions humaines :</string>
