--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="already_signup_error">You already have an account.</string>
     <string name="disconnect">Logout</string>
     <string name="your_past_adventure">Here are your\n Past Adventures\n 🌍</string>
-    <string name="details_adventure">Here are the\n details of your\n adventure ✈️</string>
+    <string name="details_adventure">Here are the details of your adventure ✈️</string>
     <string name="note_the_accommodation">Note of the accommodation :</string>
     <string name="note_the_ambiance">Note of the ambiance :</string>
     <string name="note_the_quality_of_human_interactions">Note of the quality\n of human interactions :</string>
