--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -59,4 +59,9 @@
     <string name="adventure_index">Indice d\'aventure :</string>
     <string name="average_total_score">Note totale moyenne :</string>
     <string name="delete">Supprimer ce voyage</string>
+    <string name="travel_mood_adventurous">Aventurier 🌍</string>
+    <string name="travel_mood_relaxed">Détendu 🌴</string>
+    <string name="travel_mood_cultural">Culturel 🏛️</string>
+    <string name="travel_mood_romantic">Romantique 💖</string>
+    <string name="travel_mood_family_friendly">Familial 👨‍👩‍👧‍👦</string>
 </resources>
