--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -65,4 +65,5 @@
     <string name="travel_mood_romantic">Romantique 💖</string>
     <string name="travel_mood_family_friendly">Familial 👨‍👩‍👧‍👦</string>
     <string name="trip_saved_successfully_message">Voyage enregistré avec succès</string>
+    <string name="share">Partager</string>
 </resources>
