--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="travel_mood_romantic">Romantic 💖</string>
     <string name="travel_mood_family_friendly">Family Friendly 👨‍👩‍👧‍👦</string>
     <string name="trip_saved_successfully_message">Trip saved successfully</string>
+    <string name="share">Share</string>
 </resources>
