--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,7 +105,7 @@
     <string name="transport_trip">What means of transport did you use to make this trip ?</string>
     <string name="fill_all_fields">Please fill all fields.</string>
     <string name="departure_before_arrival">The arrival date must be after the departure date.</string>
-    <string name="choose_end_date">Please choose an end date.</string>
+    <string name="choose_date">Please choose a date.</string>
     <string name="dangerous_activity">A dangerous activity, I see 👀</string>
     <string name="no_more_activities">You can no longer register more activities.</string>
 </resources>
