--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -93,7 +93,7 @@
     <string name="transport_trip">Quel moyen de transport avez-vous utilisé pour réaliser ce voyage ?</string>
     <string name="fill_all_fields">Veuillez remplir tous les champs.</string>
     <string name="departure_before_arrival">La date d\'arrivée doit être postérieure à la date de départ.</string>
-    <string name="choose_end_date">Veuillez choisir une date de fin.</string>
+    <string name="choose_date">Veuillez choisir une date.</string>
     <string name="dangerous_activity">Une activité dangereuse, à ce que je vois 👀</string>
     <string name="no_more_activities">Vous ne pouvez plus enregistrer d\'autres activités.</string>
 </resources>
