--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -98,4 +98,5 @@
     <string name="no_more_activities">Vous ne pouvez plus enregistrer d\'autres activités.</string>
     <string name="satisfaction_level_details">Niveau de satisfaction :</string>
     <string name="transport_used">Transport utilisé :</string>
+    <string name="toast_fill_activities">Vous devez remplir au moins 2 activités pour passer à l\'étape suivante. 🚶‍♂️</string>
 </resources>
